# merge-nx

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  error.rs  filetype.rs  main.rs  nxfile.rs
