[package]
name = "merge-nx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
camino = "1.1.3"
clap = { version = "4.1.8", features = ["derive"] }
glob = "0.3.1"
indicatif = "0.17.3"
thiserror = "1.0.39"
